compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__module_could_not_unify11.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 768
expression: "\n        pub record Box<inner> {\n            Box(inner)\n        }\n\n        pub fn create_int_box(value: Int) {\n            let x: Box<Float> = Box(value)\n            x\n        }"
---
----- SOURCE CODE

        pub record Box<inner> {
            Box(inner)
        }

        pub fn create_int_box(value: Int) {
            let x: Box<Float> = Box(value)
            x
        }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:7:33
  │
7 │             let x: Box<Float> = Box(value)
  │                                 ^^^^^^^^^^

Expected type:

    Box(Float)

Found type:

    Box(Int)
